force-app/main/default/objects/Patient_Medication__c/Patient_Medication__c.object-meta.xml
<CustomObject>
    <label>Medication</label>
    <nameField>
        <displayFormat>Med-{000000}</displayFormat>
        <label>Medication Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>