force-app/main/default/objects/Patient_Medication__c/fields/Dosing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Dosing_Unit__c</fullName>
    <label>Dosing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mg (milligrams)</fullName>
            </value>
            <value>
                <fullName>g (grams)</fullName>
            </value>
            <value>
                <fullName>mcg (micrograms)</fullName>
            </value>
            <value>
                <fullName>mL (milliliters)</fullName>
            </value>
            <value>
                <fullName>Units (for medications measured in units)</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>