force-app/main/default/objects/Patient_Medication__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Once Daily</fullName>
            </value>
            <value>
                <fullName>Twice Daily</fullName>
            </value>
            <value>
                <fullName>Three Times Daily</fullName>
            </value>
            <value>
                <fullName>Every 12 Hours</fullName>
            </value>
            <value>
                <fullName>Every 8 Hours</fullName>
            </value>
            <value>
                <fullName>Once Weekly</fullName>
            </value>
            <value>
                <fullName>Once Monthly</fullName>
            </value>
            <value>
                <fullName>As Needed (PRN)</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>