force-app/main/default/objects/Patient_Medication__c/fields/MedicationNotes__c.field-meta.xml
<CustomField>
    <fullName>MedicationNotes__c</fullName>
    <description>Text describing the change of the medication</description>
    <label>Medication Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>